--- a/Cprograms/Progetto_esitivo/TEST_progetto_1/emergency_types.conf
+++ b/Cprograms/Progetto_esitivo/TEST_progetto_1/emergency_types.conf
@@ -1,4 +1,3 @@
-[Allagamento] [1] Pompieri:1,5;Ambulanza:1,2;
-[Incendio] [2] Pompieri:2,8;Ambulanza:3,1;
-[Sommossa] [2] Polizia:3,8;Ambulanza:2,4;
-[IncidenteStradale] [1] Ambulanza:2,10;Polizia:1,5;Pompieri:1,3;
+[IncendioCalmo] [0] Pompieri:1,20;
+[IncendioGrave] [2] Pompieri:1,15;Ambulanza:1,10;
+[RissaLeggera] [1] Polizia:1,30;
