--- a/Cprograms/Progetto_esitivo/TEST_progetto_1/emergency_types.conf
+++ b/Cprograms/Progetto_esitivo/TEST_progetto_1/emergency_types.conf
@@ -1,3 +1,3 @@
-[IncendioCalmo] [0] Pompieri:1,20;
-[IncendioGrave] [2] Pompieri:1,15;Ambulanza:1,10;
-[RissaLeggera] [1] Polizia:1,30;
+[IncendioPiccolo] [2] VigiliDelFuoco:1,10;
+[TraumaGrave] [1] AmbulanzaRapida:1,15;PattugliaLenta:1,5;
+[DisturboNotturno] [0] PattugliaLenta:1,5;
