--- a/Cprograms/Progetto_esitivo/TEST_progetto_1/rescuers.conf
+++ b/Cprograms/Progetto_esitivo/TEST_progetto_1/rescuers.conf
@@ -1,3 +1,3 @@
-[Pompieri] [2] [10] [10;10]
-[Ambulanza] [1] [15] [80;80]
-[Polizia] [1] [5] [50;5]
+[VigiliDelFuoco] [1] [5] [5;5]
+[AmbulanzaRapida] [1] [20] [45;45]
+[PattugliaLenta] [1] [2] [25;40]
