--- a/Cprograms/Progetto_esitivo/TEST_progetto_1/emergency_types.conf
+++ b/Cprograms/Progetto_esitivo/TEST_progetto_1/emergency_types.conf
@@ -1,3 +1,10 @@
-[IncendioPiccolo] [2] VigiliDelFuoco:1,10;
-[TraumaGrave] [1] AmbulanzaRapida:1,15;PattugliaLenta:1,5;
-[DisturboNotturno] [0] PattugliaLenta:1,5;
+[IncendioEdificio] [2] PompieriStandard:2,25;PompieriVeloci:1,15;AmbulanzaBase:1,10;
+[FugaDiGas] [2] PompieriStandard:1,20;UnitaSupportoLogistico:1,30;
+[IncidenteMaggiore] [1] AmbulanzaBase:2,15;MedicoUrgente:1,20;PompieriStandard:1,10;PoliziaPattuglia:1,5;
+[MaloreGrave] [2] MedicoUrgente:1,25;AmbulanzaBase:1,5;
+[RissaViolenta] [1] PoliziaPattuglia:2,15;AmbulanzaBase:1,10;
+[AllagamentoLocale] [0] PompieriStandard:1,30;UnitaSupportoLogistico:1,20;
+[PersonaDispersa] [1] PoliziaPattuglia:2,60;UnitaSupportoLogistico:1,45;
+[IncendioBoschivoIniziale] [2] PompieriVeloci:2,40;PompieriStandard:2,30;UnitaSupportoLogistico:1,20;
+[SoccorsoTecnico] [0] PompieriStandard:1,15;UnitaSupportoLogistico:1,10;
+[SupportoOrdinePubblico] [0] PoliziaPattuglia:3,120;
