--- a/Cprograms/Progetto_esitivo/TEST_progetto_1/rescuers.conf
+++ b/Cprograms/Progetto_esitivo/TEST_progetto_1/rescuers.conf
@@ -1,3 +1,6 @@
-[VigiliDelFuoco] [1] [5] [5;5]
-[AmbulanzaRapida] [1] [20] [45;45]
-[PattugliaLenta] [1] [2] [25;40]
+[PompieriStandard] [5] [8] [10;10]
+[PompieriVeloci] [2] [15] [20;20]
+[AmbulanzaBase] [6] [10] [180;180]
+[MedicoUrgente] [3] [25] [190;190]
+[PoliziaPattuglia] [4] [7] [100;5]
+[UnitaSupportoLogistico] [2] [4] [5;195]
