--- a/Cprograms/Progetto_esitivo/TEST_progetto_1/Makefile
+++ b/Cprograms/Progetto_esitivo/TEST_progetto_1/Makefile
@@ -30,4 +30,7 @@ clean:
 	      $(SERVER_OBJS) $(CLIENT_OBJS) \
 	      *.log core
 
-.PHONY: all clean
+run: $(SERVER_NAME)
+	./$(SERVER_NAME)
+
+.PHONY: all clean run
